devops/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: codeview
  labels:
    name: codeview
    app.kubernetes.io/managed-by: kubectl
